--- a/Final_Code.ipynb
+++ b/Final_Code.ipynb
@@ -30,6 +30,8 @@
       "source": [
         "# Final Code Notebook\n",
         "\n",
+        "GitHub repository: https://github.com/smiles1313/M148FinalProject\n",
+        "\n",
         "## 1. Dataset\n",
         "\n",
         "Our team analyzed a heart failure dataset. This dataset contains features relevant to cardiovascular disease/risk detection. Our goal was to predict mortality by heart failure.\n",
@@ -46,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 211,
+      "execution_count": null,
       "metadata": {
         "id": "1czDl-QukZvc"
       },
@@ -112,7 +114,7 @@
       "metadata": {
         "id": "9MpPl5B6BQfQ"
       },
-      "execution_count": 212,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -132,12 +134,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 226
         },
         "id": "6tJV2u6FB80h",
         "outputId": "91278d25-9014-4c1a-8ef5-97c84b1b6abf"
       },
-      "execution_count": 213,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -517,7 +519,7 @@
         "id": "LKJDIJMhDUML",
         "outputId": "135c4d7a-9930-4374-801a-4bb3a4241bcb"
       },
-      "execution_count": 214,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -543,7 +545,7 @@
         "id": "yYw5N0-SrBlh",
         "outputId": "0b188286-a419-43a5-db06-db7a13ef34c7"
       },
-      "execution_count": 215,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -594,7 +596,7 @@
         "id": "s_8ksh8jDX-W",
         "outputId": "ca109ee5-b0be-422e-b957-a05ec4d4448b"
       },
-      "execution_count": 216,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -631,7 +633,7 @@
         "id": "tMPoNlMoDjIJ",
         "outputId": "eb2d1b89-e829-4793-d109-e0974c5da64a"
       },
-      "execution_count": 217,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,7 +683,7 @@
         "id": "jHUfSflBrY0j",
         "outputId": "d973337b-3ebc-40c0-8357-38e38d46fe05"
       },
-      "execution_count": 218,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -722,7 +724,7 @@
         "id": "3Sm6JHqXCnJ3",
         "outputId": "e3507eb1-e40e-4c8f-bdbd-8f5caaac22ee"
       },
-      "execution_count": 219,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1178,7 +1180,7 @@
         "id": "s5nvKnIFswFG",
         "outputId": "01dab792-4649-4865-de65-22b2fd035de3"
       },
-      "execution_count": 220,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1537,7 +1539,7 @@
         "id": "AAT298oHEe_I",
         "outputId": "f975da40-9a56-48e5-b385-bd3e1926d05c"
       },
-      "execution_count": 221,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1632,12 +1634,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 930
+          "height": 888
         },
         "id": "edyBLd6FtiYY",
         "outputId": "41c568ed-3a36-418b-85ef-e59189c4441e"
       },
-      "execution_count": 222,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1680,7 +1682,7 @@
         "id": "uqBwDoC5tluA",
         "outputId": "e95ced2a-911c-41a6-bc10-46e6034ab800"
       },
-      "execution_count": 223,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1850,7 +1852,7 @@
         "id": "ZzzON1LkupAK",
         "outputId": "4463a6bf-2e2c-49d3-edbc-4349d102d12f"
       },
-      "execution_count": 224,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2011,7 +2013,7 @@
         "id": "RIr1XWOpvNyx",
         "outputId": "b03a94e9-08dd-417d-a62c-b305c3185f99"
       },
-      "execution_count": 225,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2047,7 +2049,7 @@
         "id": "BRSs6dt2vUgg",
         "outputId": "fe84b3a7-6408-4819-8989-4ccccfae2b6e"
       },
-      "execution_count": 226,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2191,7 +2193,7 @@
         "id": "KX-P9GL66QEM",
         "outputId": "3d47e0f4-0ec2-417c-a5cb-ecf4b2e084a6"
       },
-      "execution_count": 227,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2243,7 +2245,7 @@
         "id": "fj6ib5q_x7QP",
         "outputId": "1bb75511-812f-47e8-ff8f-e3102bc2dfa7"
       },
-      "execution_count": 228,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2371,7 +2373,7 @@
         "id": "QeJtqo0HysRW",
         "outputId": "44433db9-77df-4bca-cf33-f34dce1806d5"
       },
-      "execution_count": 229,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2507,7 +2509,7 @@
         "id": "67GuBl63y0OP",
         "outputId": "05833431-b17c-4742-c585-bd44ae6d4faf"
       },
-      "execution_count": 230,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2578,7 +2580,7 @@
         "id": "IHDHyAiR0Bcp",
         "outputId": "430c48ee-822e-49d4-f118-de9a3b6c4911"
       },
-      "execution_count": 231,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2651,7 +2653,7 @@
         "id": "72cyLF4o1ApC",
         "outputId": "4b1492e0-eac6-4078-81b7-e33ad6dd5359"
       },
-      "execution_count": 232,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2734,7 +2736,7 @@
       "metadata": {
         "id": "8aZ4WNrsGVrW"
       },
-      "execution_count": 233,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2765,7 +2767,7 @@
         },
         "outputId": "abb85d06-5946-47f8-cf93-98044dc95524"
       },
-      "execution_count": 234,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2877,7 +2879,7 @@
         },
         "outputId": "a24debab-c385-4575-a086-86f7decd2142"
       },
-      "execution_count": 235,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2996,7 +2998,7 @@
         "id": "QGiWiSp1GgCo",
         "outputId": "87c283fe-9dce-4b0a-a239-217e439171dc"
       },
-      "execution_count": 236,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3037,7 +3039,7 @@
         "id": "y2krgwJ4lVXY",
         "outputId": "4b8738ab-ad4b-4f63-b8db-d327c5cebc9c"
       },
-      "execution_count": 237,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3070,7 +3072,7 @@
       "source": [
         "## Additional Models and Analysis Discussed in Appendix\n",
         "\n",
-        "Corresponding code was submitted as part of project check-ins."
+        "Code for the logistic regression and random forest methods can be found in the GitHub repository. All other corresponding code was submitted as part of project check-ins."
       ],
       "metadata": {
         "id": "Plj1Ix5Hwgz9"
